[tool.poetry]
name = "treestore"
version = "0.1.0"
description = ""
authors = ["EvgeniyaAlekseevna <zhenya.sudniczina@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
